fix(Landing): font size alignment

--- a/assets/css/modules/_landing.scss
+++ b/assets/css/modules/_landing.scss
@@ -11,7 +11,7 @@
     .width-100 {
       width: 100% !important;
     }
-    height: 600px;
+    height: 800px;
     background-image: url(../img/mountain-man.jpg);
     background: -webkit-linear-gradient(bottom, rgba(54,98,173,0.5), rgba(0,0,0,0), url(../img/mountain-man.jpg)); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(bottom, rgba(54,98,173,0.5), rgba(0,0,0,0), url(../img/mountain-man.jpg)); /* For Opera 11.1 to 12.0 */
@@ -70,20 +70,6 @@
       height: auto;
       margin-right: 15px;
     }
-    h2 {
-      font-size: 38px;
-      font-weight: 400;
-    }
-    .type-h5 {
-      font-size: 23px;
-      font-weight: 300;
-    }
-    h3 {
-      color: #049bd4;
-      font-size: 23px;
-      font-weight: 300;
-      margin-top: 0;
-    }
     h4 {
       color: #5f5f5f;
       font-size: 13px;
@@ -109,7 +95,9 @@
     float: left;
   }
   .quickstart {
-    background-color: #f5f5f5;
+    width: 100%;
+    position: absolute;
+    background-color: rgba(245,245,245,0.6);
   }
   .navbar {
     margin-bottom: 0px;
@@ -699,10 +687,6 @@
 
 .landing-page .bitinf > img {
   width: 3em;
-}
-
-.landing-page #newToBTC {
-  margin-bottom: 16px;
 }
 
 .landing-page #timeline {
